# sqc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: completions.rs  format.rs  functions.rs  highlight.rs  input.rs  macros.rs  main.rs  output.rs  settings.rs  sql.rs
