[package]
name = "sqc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
clap = "3.0.0-beta.2"
comfy-table = "5.0.0"
itertools = "0.10.1"
once_cell = "1.8.0"
rusqlite = { version = "0.26.1", features = ["column_decltype"] }
rustyline = "9.0.0"
sqlformat = "0.1.8"
termcolor = "1.1.2"
tree-sitter = "0.20.0"
tree-sitter-highlight = "0.20.0"
tree-sitter-sqlite = { git = "https://github.com/goto-bus-stop/tree-sitter-sqlite", branch = "tree-sitter-0.20" }

[features]
