[package]
name = "sqc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.45"
clap = { version = "4.0.0", features = ["derive"] }
comfy-table = "6.0.0"
csv = "1.1.6"
directories = "4.0.1"
indicatif = "0.17.1"
itertools = "0.10.1"
once_cell = "1.8.0"
rusqlite = { version = "0.28.0", features = ["bundled", "backup", "column_decltype", "csvtab", "vtab"] }
rustyline = "10.0.0"
sqlformat = "0.2.0"
termcolor = "1.1.2"
tree-sitter = "0.20.0"
tree-sitter-highlight = "0.20.0"
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json", rev = "7307675" }
tree-sitter-sqlite = { git = "https://github.com/dhcmrlchtdj/tree-sitter-sqlite", rev = "0e7801b" }

[features]

[profile.release]
debug = true
