[package]
name = "sqc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.45"
clap = { version = "4.0.0", features = ["derive"] }
comfy-table = "7.0.0"
csv = "1.1.6"
directories = "5.0.0"
humansize = "2.1.3"
indicatif = "0.17.1"
once_cell = "1.8.0"
rusqlite = { version = "0.30.0", features = ["bundled", "backup", "column_decltype", "csvtab", "functions", "vtab"] }
rustyline = "13.0.0"
sqlformat = "0.2.0"
termcolor = "1.1.2"
tree-sitter = "0.20.0"
tree-sitter-highlight = "0.20.0"
tree-sitter-sqlite = { git = "https://github.com/dhcmrlchtdj/tree-sitter-sqlite", rev = "0e7801b" }

[features]

[profile.release]
debug = true
